--- a/examples/test.html
+++ b/examples/test.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<title></title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/kolors.css">
 </head>
 <body>
 <div id="plugin" class="input"></div>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/plugin.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="../src/kolors.js"></script>
 
 <script type="text/javascript">
 
